src/styles/global.css
:root {
  --background-body: #222;
  --background-cards: #3c3c3c;
  --text-main: #d9d9d9;
  --text-secondary: #ccc;
  --primary-color: #d9d9d9;
  --font-family-primary: ABC Diatype, sans-serif, -apple-system, system-ui;
  --font-family-secondary: ABC Diatype Mono, sans-serif, -apple-system,
    system-ui;
  --font-alt: -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", Roboto,
    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  --layout-padding: 1rem;
  --card-border-radius: 0.5rem;

  --left-padding-general: 315px;
  --right-padding-general: 10%;
  --primary-msg-size-general: 2.65rem;
  --primary-msg-line-height-general: 2.7rem;
  --secondary-msg-size-general: 1.6rem;
  --secondary-msg-line-height-general: 1.7rem;
  --sticky-padding-general: 0.85rem;

  --left-padding-desktop: 215px;
  --right-padding-desktop: 10%;
  --primary-msg-size-desktop: 1.8rem;
  --primary-msg-line-height-desktop: 1.9rem;
  --secondary-msg-size-desktop: 1.5rem;
  --secondary-msg-line-height-desktop: 1.55rem;
  --sticky-padding-desktop: 0.6rem;

  --left-padding-tablet: 5%;
  --right-padding-tablet: 5%;
  --primary-msg-size-tablet: 1.6rem;
  --primary-msg-line-height-tablet: 1.7rem;
  --secondary-msg-size-tablet: 1.3rem;
  --secondary-msg-line-height-tablet: 1.45rem;
  --sticky-padding-tablet: 0.58rem;

  --left-padding-mobile: 10px;
  --right-padding-mobile: 10px;
  --primary-msg-size-mobile: 1.35rem;
  --primary-msg-line-height-mobile: 1.45rem;
  --secondary-msg-size-mobile: 1.1rem;
  --secondary-msg-line-height-mobile: 1.2rem;
  --sticky-padding-mobile: 0.55rem;

  --bezier-animation: cubic-bezier(0.8, 0, 0.3, 1);
  --animation-time: 3.3s;
  --animation-delay: 0.5s;

  --bezier-animation-star: cubic-bezier(0, 0, 0.5, 1);
}

:root.theme-dark {
  --background-body: #222;
  --text-main: #d9d9d9;
  --text-secondary: #ccc;
  --primary-color: aquamarine;
}

html,
body {
  scroll-behavior: smooth;
  -webkit-user-drag: none;
}

html:focus-within {
  scroll-behavior: smooth;
}

.green {
  color: #24b54a;
}

.font-secondary {
  font-family: var(--font-family-secondary);
}

::-webkit-scrollbar {
  width: 0.1rem;
}

::-webkit-scrollbar-track {
  background: var(--background-body);
}

::-webkit-scrollbar-thumb {
  background: var(--primary-color);
}

::-moz-selection {
  /* Code for Firefox */
  color: var(--background-body);
  background: var(--primary-color);
}

::selection {
  color: var(--background-body);
  background: var(--primary-color);
}

@supports (scrollbar-gutter: stable) {
  html {
    overflow-y: auto;
    scrollbar-gutter: stable;
  }
}

*,
*:before,
*:after {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  font-family: var(--font-family-primary);
  font-size: 16px;
  line-height: 1.6;
  background-color: var(--background-body);
  color: var(--text-main);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  line-height: 1.1;
  margin: 0 0 0.5rem 0;
}

h1 {
  font-family: var(--font-family-primary);
  font-size: 4rem;
  margin: 0 0 1rem 0;
}

h2 {
  margin: 1rem 0 1rem 0;
  font-size: var(--primary-msg-size-general);
}

h3 {
  font-size: var(--secondary-msg-size-general);
  font-family: var(--font-family-primary);
}

h4 {
  font-size: 1.4rem;
}

h5 {
  font-size: 1.2rem;
}

h6 {
  font-size: 1.1rem;
}

ol,
ul {
  padding-left: 2rem;
  -webkit-padding-start: 5%;
  -webkit-padding-end: 5%;
}

li p {
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

p {
  margin-top: 0;
}

ul {
  list-style-type: none;
  padding-top: 0;
  margin-top: 0;
  padding-left: 0;
}

ul li::before {
  content: "●"; /* Use a bullet point character as content */
  display: inline-block;
  position: absolute;
  transform: translateX(-1.4rem);
  margin-right: 0.2rem;
}

a {
  color: inherit;
  transition: color linear 0.15s;
}

a:hover {
  color: var(--primary-color);
}

p a {
  text-decoration: none;
  box-shadow: inset 0 -0.12em 0 var(--primary-color);
  -webkit-transition:
    box-shadow 0.2s ease-in-out,
    color 0.2s ease-in-out;
  transition:
    box-shadow 0.2s ease-in-out,
    color 0.1s ease-in-out;
}

p a:hover {
  box-shadow: inset 0 -1.5em 0 var(--primary-color);
  color: var(--background-body);
}

img {
  max-width: 100%;
  height: auto;
}

code {
  font-family: "SF Mono", menlo, inconsolata, monospace;
  font-size: calc(1em - 2px);
  color: var(--text-secondary);
  padding: 0.2em 0.4em;
  border-radius: 2px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

pre {
  border-radius: 8px !important;
  margin: 1.2em 0 !important;
  padding: 1.2em;
}

pre code {
  padding: 0;
}

blockquote {
  border-left: 4px solid #cccccc;
  font-size: 1.4em;
  font-style: italic;
  margin: 2rem 0;
  padding-left: 2rem;
  padding-right: 2rem;
}

blockquote p {
  padding-bottom: 6px;
}

blockquote footer {
  font-size: 1.1rem;
  text-align: right;
}

figure {
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  margin: 0 0 3em 0;
}

table {
  border-collapse: collapse;
  font-family: var(--font-family-secondary);
  font-size: 1.125em;
  margin: 2em 0;
}

th {
  border-bottom: 2px solid #cccccc;
  padding: 0.4em 0.8em;
}

td {
  padding: 0.4em 0.8em;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
}

.content p img {
  border-radius: var(--card-border-radius);
  object-fit: cover;
  object-position: center;
}

.content p {
  hyphens: auto;
  width: clamp(200px, 100%, 700px);
}

.theme-toggle {
  display: inline-flex;
  align-items: center;
  height: 100%;
  padding: 0.33em 0.67em;
  padding-top: 8px;
  margin-left: 10px;
  gap: 0.6em;
  border-radius: 99em;
  background-color: var(--theme-code-inline-bg);
}
/* ... */

